# timlg-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  PROTOCOL.md  README.md  RUNBOOK_DEVNET.md  SECURITY.md
idl/: timlg_protocol.json
oracle/: Dockerfile  create_round_auto_devnet.js  keys.js  nist.js  package-lock.json  package.json  run_oracle_devnet.js  settle_round_tokens_auto_devnet.js
programs/timlg_protocol/: Cargo.toml
programs/timlg_protocol/src/: constants.rs  contexts.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/timlg_protocol/src/instructions/: admin.rs  commit.rs  escrow.rs  lifecycle.rs  mod.rs  oracle.rs  oracle_set.rs  reveal.rs  reward.rs
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: README.md  oracle-node.env.example  oracle-node.mjs  ticket-manager.env.example  ticket-manager.mjs
sdk/src/: client.ts  index.ts  pdas.ts
sdk/src/idl/: timlg_protocol.json
sdk/src/types/: timlg_protocol.ts
sdk/src/utils/: crypto.ts
tests/: canonicity_vectors.test.js  timlg_protocol.js  timlg_protocol.ts
