[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

[profile.release.build-override]
opt-level = "z"
codegen-units = 1

[profile.test]
opt-level = 0
overflow-checks = true
